# oxideav-ilbc

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release-plz.yml
src/: bitreader.rs  bitwriter.rs  cb.rs  cb_search.rs  codec.rs  decoder.rs  encoder.rs  enhancer.rs  hp_filter.rs  lib.rs  lpc_analysis.rs  lsf.rs  lsf_quant.rs  lsf_tables.rs  state.rs  state_encode.rs  synthesis.rs
tests/: decode_smoke.rs  decoder_snr.rs  enhancer_snr.rs  hp_filter_helps.rs  round_trip_snr.rs  state_snr.rs
